--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,33 @@
-# -- Core Framework --
-# The web framework and related utilities
-django~=4.2.0
-djangorestframework~=3.14.0 # For building REST APIs for AJAX endpoints
-django-cors-headers~=4.2.0 # For handling Cross-Origin Resource Sharing
-
-# -- Data Science & Machine Learning --
-# Libraries for data manipulation, analysis, and modeling
-pandas~=2.0.0
-numpy~=1.24.0
-scikit-learn~=1.3.0
-statsmodels~=0.14.0 # For statistical modeling and time-series analysis (Claims Prediction)
-scipy~=1.11.0 # Often a dependency for scientific computing tasks
-
-# -- Data Visualization --
-# For generating charts and graphs in dashboards and reports
-matplotlib~=3.7.0
-seaborn~=0.12.0
-plotly~=5.15.0 # Excellent for interactive charts
-
-# -- Database Connector --
-# Use the appropriate driver for your database. This one is for PostgreSQL.
-psycopg2-binary~=2.9.0
-
-# -- Production & Utilities --
-gunicorn~=21.2.0 # WSGI server for deployment
-python-dotenv~=1.0.0 # For loading environment variables from .env file
+asgiref==3.9.1
+charset-normalizer==3.4.2
+cloudpickle==3.1.1       
+colorama==0.4.6
+Django==5.0.14
+django-pandas==0.6.7     
+joblib==1.5.1
+llvmlite==0.44.0
+mssql-django==1.5        
+narwhals==1.47.1
+numba==0.61.2
+numpy==2.2.6
+packaging==25.0
+pandas==2.3.1
+patsy==1.0.1
+pillow==11.3.0
+plotly==6.2.0
+pyodbc==5.2.0
+python-dateutil==2.9.0.post0
+pytz==2025.2
+reportlab==4.4.3
+scikit-learn==1.7.1
+scipy==1.16.0
+shap==0.48.0
+six==1.17.0
+slicer==0.0.8
+sqlparse==0.5.3
+statsmodels==0.14.5
+threadpoolctl==3.6.0
+tqdm==4.67.1
+typing_extensions==4.14.1
+tzdata==2025.2
+xlsxwriter==3.2.5
